css/gobbit.css
.menu{
	margin: 0px;
}

.menu ul {
	margin: 0px;
	padding: 0px;
	overflow: hidden;
	background-color: grey;
}

.menu li {
	float: left;
}

.menu li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

.menu li a:hover{
	color: white;
	background-color: #111;
}

label{
	display:block;
}


ul.communities{
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: white;
}

li.community{
	float: none;
}

a.community:hover{
	color: black;
}


.bgimage {
	background-image: url('something.jpg');
	background-position: center top;
	background-repeat: no-repeat;
	padding: 30px 30px 30px 30px;
}

.blurcontent {
	position: relative;
	padding: 20px;
	background: rgb(34,34,34); /* for IE */
	background: rgba(34,34,34,0.75);
	color:white;
	width:72%;
}

.blurbg {
	/* Absolutely position it, but stretch it to all four corners, then put it just behind #search's z-index */
	position: absolute;
	top: 0px;
	right: 0px;
	bottom: 0px;
	left: 0px;
	z-index: 99;

	/* Pull the background 70px higher to the same place as #bg's */
	background-position: center -70px;

	-webkit-filter: blur(10px);
	filter: blur(10px);
}

.follow_community_btn{
	position:absolute;
	top: 5px;
	right: 5px;
}

.button.red {
	color: #f34248;
	border-color: #f34248;
}

.button.red:hover {
	color: #fff;
	border-color: #fff;
	background-color: #f34248;
}

.pagination ul{
	background-color:white;
}
.pagination li{
	background-color:white;
	float: left;
}


.topicmodal{
	padding:20px;
	width:100%;
	height:100%;
	overflow: auto;
	position:fixed;
	top:0px;
	background-color: white;
	z-index: 101;
}

.closemodal{
	position: fixed;
	right: 30px;
	font-size: large;
}

.avatar{
	width:80px;
	height:80px;
}

.profile-avatar{
	width:200px;
	height:200px;
	border: 2px solid grey;
    border-radius: 30px;
}

.post{
	border: none;
	border-bottom: 1px solid grey;
	margin:50px;
	margin-top: 0px;
}

.action-link{
	font-size: 25px;
	padding: 10px;
}

